# fastapi-graphql-tutorial

./: .flake8  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  test_main.http
app/: main.py
app/core/: config.py  database.py  graph_ql.py  logger.py
app/crud/: __init__.py  author.py  book.py  item.py
app/endpoints/: __init__.py  author.py  book.py  item.py
app/models/: __init__.py  author.py  book.py  item.py
app/schemas/: __init__.py
app/schemas/graphql/: __init__.py  author.py  book.py  item.py  mutation.py  query.py
app/schemas/pydantic/: __init__.py  author.py  book.py
