[tool.poetry]
name = "fastapigraphql"
version = "0.1.0"
description = ""
authors = ["m.kumeta <m.kumeta@nakamu-farm.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
autoflake = "^2.1.1"
strawberry-graphql = "^0.175.1"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
